Bugfix: tabbing through the Image Grid could cause elements to shift upward abruptly. Seems to be a bug with the Grid animation and transform. Removing the Transform fixed it

--- a/src/components/image-gallery/_image-gallery.scss
+++ b/src/components/image-gallery/_image-gallery.scss
@@ -1,6 +1,7 @@
 .image-gallery {
   display: grid;
   grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
   grid-gap: rem(40);
 
   @include media-breakpoint-up(md) {
@@ -65,7 +66,7 @@
   }
 
   &:hover,
-  &:focus-within:not(.image-gallery__image-contact) {
+  &:focus-within {
     &:before,
     &:after {
       opacity: 1;
@@ -98,8 +99,7 @@
 
     .image-gallery__console-wrap {
       opacity: 1;
-      transform: translateY(0);
-      transition: transform 0.2s 0.3s ease-out, opacity 0.2s 0.3s ease-out;
+      transition: opacity 0.2s 0.3s ease-out;
     }
   }
 }
@@ -179,13 +179,12 @@
   bottom: 0;
   left: 0;
   right: 0;
-  transform: translateY(100%);
   overflow: hidden;
   opacity: 0;
   display: flex;
   justify-content: center;
   gap: rem(28);
-  transition: transform 0.3s ease-in-out, opacity 0.2s ease-in-out, width 0.3s ease-in-out;
+  transition: opacity 0.2s ease-in-out, width 0.3s ease-in-out;
 
   @include media-breakpoint-up("md") {
     gap: rem(10);
